2002-01-14  Richard Earnshaw  <rearnsha@arm.com>

	* MAINTAINERS: Add self as co-maintainer for the ARM code.

2001-12-18  Nick Clifton  <nickc@cambridge.redhat.com>

	* po/es.po: Import from translation project.
	* configure.in (ALL_LINGUAS): Add es.
	* configure: Regenerate.

2002-01-09  Jason Thorpe  <thorpej@wasabisystems.com>

	* readelf.c (get_netbsd_elfcore_note_type): Use
	NT_NETBSDCORE_PROCINFO and NT_NETBSDCORE_FIRSTMACH.

2002-01-09  Jason Thorpe  <thorpej@wasabisystems.com>

	* readelf.c: Update copyright years.
	(get_note_type): Return a const char *.
	(get_netbsd_elfcore_note_type): New function.
	(process_note): Use get_netbsd_elfcore_note_type to get
	the note type string for NetBSD ELF core files.

2002-01-06  Steve Ellcey  <sje@cup.hp.com>

	* readelf.c (get_ia64_segment_type): Add support for macros.
	(get_segment_type): Add support for IA64 specific macros.

2001-12-20  Julian v. Bock  <julian@wongr.net>

	* readelf.c (print_symbol): New function: Print a formatted symbol
	name.  If --wide is specified do not truncate it.
	(dump_relocations): Use print_symbol() to print symbol names.
	(process_symbol_table): Likewise.
	(process_syminfo): Likewise.
	(process_mips_specific): Likewise.
	(usage): Document new feature of --wide switch.
	* doc/binutils.texi (objdump): Document additional behaviour of
	--wide.
	
2001-12-18  Michael Snyder  <msnyder@redhat.com>

	* objcopy.c (copy_file): Accept corefiles (format bfd_core).
	(copy_object): Don't set the start address or flags of a core file.
	(copy_section): Don't relocate a core file.  Don't copy contents
	if the input section has the contents flag set, but the output
	section does not (which happens with the fake 'note' pseudo-
	sections that BFD creates for corefiles).

2001-12-18  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* readelf.c (get_machine_flags): Recognize header flags for ABI and
	ASE extensions. More robust code for ISA checking. Ignore empty fields