@@ -1,3 +1,10 @@
+2002-01-15  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* objcopy.c (copy_usage): Use "switches" instead of "options".
+        (strip_usage): Use "switches" instead of "options".
+	* doc/binutils.texi (dlltool):  Refer to "switches" instead of
+        "options".
+
 2002-01-14  Richard Earnshaw  <rearnsha@arm.com>
 
 	* MAINTAINERS: Add self as co-maintainer for the ARM code.
